# footfetch

./: .SRCINFO  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  PKGBUILD  README.md  flake.nix  footfetch.c  install.sh  version.json
.github/: FUNDING.yml
.github/workflows/: aur.yml  build.yml  bump_version.yml  crates.yml  release.yml  test.yml
scripts/: bump_version.py  install-linux.sh  uninstall-linux.sh
src/: footfetch.c  main.rs
