[package]
name = "footfetch"
version = "1.42.4"
edition = "2021"
authors = ["Aiden Asset <adenast@proton.me>"]
description = "A neofetch-like tool for those who prefer feet over faces"
readme = "README.md"
repository = "https://github.com/adenast/footfetch"
license = "MIT"
keywords = ["cli", "system", "fetch"]
categories = ["command-line-utilities"]

[dependencies]
